cluster/gitops/development/coder/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app_name coder
spec:
  hostnames:
    - coder.${SECRET_PUBLIC_DOMAIN_NAME}
    - "*.coder.${SECRET_PUBLIC_DOMAIN_NAME}"
  parentRefs:
    - name: internal-gateway
      namespace: networking
  rules:
    - backendRefs:
        - name: *app_name
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
